2005-05-09  Michael Natterer  <mitch@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpcontrollerlist.[ch]: new widget which allows
	adding/removing controllers using two lists of available/active
	controllers. Work in progress...

	* app/widgets/gimpcontrollerinfo.[ch]: derive it from GimpVieable
	so it can have an icon (unfinished). Added convenience constructor
	gimp_controller_info_new().

	* app/dialogs/preferences-dialog.c: use a GimpControllerList
	instead of a notebook of GimpControllerEditors.

2005-05-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/Makefile.am: removed traces of plug-ins/common,

2005-05-09  Sven Neumann  <sven@gimp.org>

	* app/base/tile-manager.c: inline tile_manager_get_tile_num().

	* app/display/gimpdisplayshell-render.c (render_image_tile_fault):
	reverted one of the changes I did here earlier.

2005-05-08  Sven Neumann  <sven@gimp.org>

	* app/dialogs/layer-options-dialog.c (layer_options_dialog_new):
	always set "activates-default" on the name entry.

2005-05-08  Sven Neumann  <sven@gimp.org>

	* app/base/tile-manager.[ch]: some code cleanup.

2005-05-08  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimppropwidgets.c (gimp_prop_entry_new)
	(gimp_prop_entry_notify): don't call gtk_entry_set_text() with a
	NULL text.

2005-05-08  Sven Neumann  <sven@gimp.org>

	* app/config/gimpbaseconfig.c: limit the tile-cache-size to
	G_MAXULONG or GIMP_MAX_MEMSIZE, whatever is smaller. Fixes
	bug #303371.

2005-05-07  Manish Singh  <yosh@gimp.org>

	* tools/pdbgen/pdb/image.pdb: Fix a typo reported in bug #303379.

	* app/pdb/image_cmds.c
	* libgimp/gimpimage_pdb.c: regenerated.

2005-05-07  Sven Neumann  <sven@gimp.org>

	* app/actions/edit-commands.c (edit_undo_clear_cmd_callback): tell
	the user how much memory will be freed by clearing the undo history.

2005-05-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimppainttool.[ch]